--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
 	"private": true,
 	"dependencies": {
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"react-icons": "^4.10.1",
+		"react-router-dom": "^6.14.1",
+		"sass": "^1.63.6"
 	},
 	"scripts": {
-		"dev": "webpack --watch --progress --config webpack.dev.js",
-		"build": "webpack --config webpack.prod.js"
+		"watch": "webpack --watch --progress --config webpack.dev.js",
+		"build": "webpack --config webpack.prod.js",
+		"dev": "webpack serve --open --config webpack.dev.js"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.22.5",
@@ -19,13 +23,22 @@
 		"@babel/preset-react": "^7.22.5",
 		"@types/react": "^18.2.14",
 		"@types/react-dom": "^18.2.6",
+		"@types/react-router-dom": "^5.3.3",
+		"autoprefixer": "^10.4.14",
 		"babel-loader": "^9.1.2",
 		"copy-webpack-plugin": "^11.0.0",
+		"css-loader": "^6.8.1",
 		"html-webpack-plugin": "^5.5.3",
+		"postcss": "^8.4.24",
+		"postcss-loader": "^7.3.3",
+		"postcss-preset-env": "^9.0.0",
+		"style-loader": "^3.3.3",
+		"tailwindcss": "^3.3.2",
 		"ts-loader": "^9.4.4",
 		"typescript": "^5.1.6",
 		"webpack": "^5.88.1",
 		"webpack-cli": "^5.1.4",
+		"webpack-dev-server": "^4.15.1",
 		"webpack-merge": "^5.9.0"
 	}
 }
