--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"license": "MIT",
 	"private": true,
 	"dependencies": {
+		"classnames": "^2.3.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.10.1",
@@ -21,11 +22,13 @@
 		"@babel/core": "^7.22.5",
 		"@babel/preset-env": "^7.22.5",
 		"@babel/preset-react": "^7.22.5",
+		"@types/chrome": "^0.0.240",
 		"@types/react": "^18.2.14",
 		"@types/react-dom": "^18.2.6",
 		"@types/react-router-dom": "^5.3.3",
 		"autoprefixer": "^10.4.14",
 		"babel-loader": "^9.1.2",
+		"chrome-types": "^0.1.213",
 		"copy-webpack-plugin": "^11.0.0",
 		"css-loader": "^6.8.1",
 		"html-webpack-plugin": "^5.5.3",
