--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,5 +10,12 @@
 		"16": "./icons/icon16.png",
 		"32": "./icons/icon32.png",
 		"128": "./icons/icon128.png"
-	}
+	},
+	"background": {
+		"service_worker": "background.js",
+		"type": "module"
+	},
+	"permissions": [
+		"activeTab"
+	]
 }
