--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"sass": "^1.63.6"
 	},
 	"scripts": {
-		"watch": "webpack --watch --progress --config webpack.dev.js",
+		"watch": "webpack --watch --progress --config webpack.prod.js",
 		"build": "webpack --config webpack.prod.js",
 		"dev": "webpack serve --open --config webpack.dev.js"
 	},
