--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
 		"@babel/core": "^7.22.5",
 		"@babel/preset-env": "^7.22.5",
 		"@babel/preset-react": "^7.22.5",
-		"@types/chrome": "^0.0.240",
+		"@types/chrome": "^0.0.241",
 		"@types/react": "^18.2.14",
 		"@types/react-dom": "^18.2.6",
 		"@types/react-router-dom": "^5.3.3",
+		"@types/serviceworker": "^0.0.72",
 		"autoprefixer": "^10.4.14",
 		"babel-loader": "^9.1.2",
 		"chrome-types": "^0.1.213",
